# bot

./: .gitignore  Cargo.toml  README.md  flake.nix  schema.sql  wrangler.toml
.github/workflows/: deploy.yaml
bot-parser/: Cargo.toml
bot-parser/src/: error.rs  lib.rs  time.rs
migrations/: 0001_add_merge_table_schema.sql  0002_add_installation_id_row_in_the_merge_table.sql  0003_create_index.sql
src/: crypt.rs  error.rs  github.rs  handle.rs  lib.rs  parser.rs  schedule.rs
src/parser/: error.rs  time.rs
