[package]
name = "satler-bot"
version = "0.1.0"
edition = "2021"

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.5.0", features = ['http', 'axum'] }
worker-macros = { version = "0.5.0", features = ['http'] }
console_error_panic_hook = { version = "0.1.1" }

# crypt
subtle = "2.6.0"
sha2 = "0.10.8"
hmac = "0.12.1"
hex = "0.4"

ocho-gato = "0.1.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
thiserror = "2.0"
